--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- completa-->
+        <meta charset="UTF-8" />
+        <title>UAB/Enginyeria</title>
+        <meta name="author" content="Aran Pardo Ayora" />
+        <meta name="description" content="Problema 1 de TDIW" />
+        <meta name="keywords" content="Problema 1, UAB, TDIW" />
     </head>
     <body>
         <!-- SECCIÓ 1 - Capçalera -->
         <header>
-            <!-- completa -->
+            <a href="https://www.uab.cat/" target="_self" ><img src="img/uab.png" width="200px"><a/>
+            <h1>Escola d'Enginyeria</h1>
+            <p>Benvinguts a l'Escola d'Enginyeria de la UAB</p>
+            <hr/>
         </header>
         <!-- SECCIÓ 2 - Llistat dels diferents graus que ofereix l’escola d’enginyeria -->
         <section>
@@ -14,7 +21,16 @@
                 <h3>Graus disponibles: </h3>
             </header>
             <ul>
-                <!-- completa -->
+                <li><a href="http://www.uab.cat/grauEI">Enginyeria Informatica</a></li>
+                <ul>
+                    <li>Menció en Enginyeria del software</li>
+                    <li>Menció en Enginyeria de computadors</li>
+                    <li>Menció Computació</li>
+                    <li><a href="mencions/TI/index.html">Tecnologies de la informació</a></li>
+                </ul>
+                <li>Enginyeria de sistemes de Telecomunicació</li>
+                <li>Enginyeria Electrónica de Telecomunicació</li>
+                <li>Enginyeria Química</li>
             </ul>
         </section>
         <!-- SECCIÓ 3 - Formulari de registre -->
@@ -24,7 +40,7 @@
             </header>
             <p> Si us plau facilita'ns les teves dades </p>
             <form method="post" action="">
-                <!-- completa -->
+                Nom complet: <input type="text" name="nom"><br />
             </form>
             <hr />
         </section>
