--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li>Menció Computació</li>
                     <li><a href="mencions/TI/index.html">Tecnologies de la informació</a></li>
                 </ul>
-                <li>Enginyeria de sistemes de Telecomunicació</li>
+                <li>Enginyeria de Sistemes de Telecomunicació</li>
                 <li>Enginyeria Electrónica de Telecomunicació</li>
                 <li>Enginyeria Química</li>
             </ul>
@@ -41,6 +41,14 @@
             <p> Si us plau facilita'ns les teves dades </p>
             <form method="post" action="">
                 Nom complet: <input type="text" name="nom"><br />
+                Password: <input type="text" name="password"><br />
+                Grau: <select name="grau">
+                    <option value="I">Enginyeria Informatica</option>
+                    <option value="S">Enginyeria de Sistemes de Telecomunicació</option>
+                    <option value="E">Enginyeria Electrónica de Telecomunicació</option>
+                    <option value="Q">Enginyeria Química</option>
+                </select>
+            <p>Tria la menció que t'atreu més:</p>
             </form>
             <hr />
         </section>
@@ -55,7 +63,8 @@
         </section>
         <!-- SECCIÓ 5 - Peu de pàgina -->
         <footer>
-            <!-- completa -->
+            <img src="img/campus-e.png" width="100px" />
+            <p>&copy;Universitat Autònoma de Barcelona. Campus d'Excel·lència</p>
         </footer>
     </body>
 </html>
